feat[URD]  Phân biệt được Edgecase đó là có hướng giải quyết hay không; Các Edgecase có hướng giải quyết thì add thẳng vào các mục AC, BR ...
